# bets-cli

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/bets/: __init__.py  main.py
src/bets/model/: match.py  matches.py  scenario.py  scenarios.py
src/bets/model/stats/: abstract_stats.py  constants.py  match_stats.py  outcome_stats.py  ratio_stats.py  reports.py  score_stats.py  stats_collection.py
src/bets/program_io/: matches_input.py  matches_output.py  scenarios_output.py
src/bets/ui/: bets_app.py  constants.py  matches_observable.py  menu_bar.py  table_frame.py
src/bets/ui/matches_tab/: constants.py  manual_match_input_frame.py  matches_tab.py  matches_tab_frame.py  matches_table.py  matches_table_frame.py  pasted_matches_input.py  single_match_input.py
src/bets/ui/scenarios_tab/: filter_frames.py  filters_frame.py  generate_scenarios_frame.py  scenarios_data_row.py  scenarios_tab.py  scenarios_tab_frame.py
src/bets/ui/stats_tab/: stats_tab_frame.py
src/bets/utils/: constants.py  decorators.py  excel_util.py  file_sys.py  log.py  num_utils.py  string_utils.py  sys_util.py  sys_utils.py
tests/: conftest.py
tests/model/: test_match.py  test_scenarios.py
tests/program_io/: test_matches_input.py  test_matches_output.py
tests/utils/: test_excel_util.py  test_file_sys.py  test_num_utils.py
