[metadata]
name = bets-cli
description = CLI to assist football bets
author = nachereshata
author-email = nachereshata@gmail.com
license = mit
url = https://github.com/nachereshata/bets-cli.git
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.

install_requires =
    tabulate==0.8.2
    more-itertools==5.0.0
    pandas==0.23.4

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6.5

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install bets-cli[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    mock
    flake8
    sphinx

[options.entry_points]

console_scripts =
    bets = bets.main:run

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov bets --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1

package = bets

